--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,12 @@
 {
   "alwaysUpdateLinks": true,
   "showInlineTitle": true,
-  "vimMode": false
+  "vimMode": false,
+  "pdfExportSettings": {
+    "includeName": false,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
