--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,7 +1,10 @@
 {
-  "accentColor": "",
-  "cssTheme": "Tokyo Night",
+  "accentColor": "#d40c95",
+  "cssTheme": "Obsidian Nord",
   "nativeMenus": false,
   "showViewHeader": true,
-  "theme": "obsidian"
+  "theme": "obsidian",
+  "interfaceFontFamily": "CMU Serif",
+  "textFontFamily": "CMU Serif",
+  "monospaceFontFamily": "CMU Serif"
 }
